# src/main/kotlin/uk/gov/justice/digital/hmpps/supportadditionalneedsapi/domain/entity/PlanCreationScheduleEntity.kt
@@ -1,0 +1,78 @@
+package uk.gov.justice.digital.hmpps.supportadditionalneedsapi.domain.entity
+
+import jakarta.persistence.Column
+import jakarta.persistence.Entity
+import jakarta.persistence.EntityListeners
+import jakarta.persistence.EnumType
+import jakarta.persistence.Enumerated
+import jakarta.persistence.GeneratedValue
+import jakarta.persistence.Id
+import jakarta.persistence.Table
+import org.hibernate.annotations.CreationTimestamp
+import org.hibernate.annotations.UpdateTimestamp
+import org.hibernate.annotations.UuidGenerator
+import org.springframework.data.annotation.CreatedBy
+import org.springframework.data.annotation.LastModifiedBy
+import org.springframework.data.jpa.domain.support.AuditingEntityListener
+import java.time.Instant
+import java.time.LocalDate
+import java.util.UUID
+
+@Table(name = "plan_creation_schedule")
+@Entity
+@EntityListeners(value = [AuditingEntityListener::class])
+data class PlanCreationScheduleEntity(
+  @Column(updatable = false)
+  val reference: UUID,
+
+  @Column(updatable = false)
+  val prisonNumber: String,
+
+  @Column
+  var deadlineDate: LocalDate,
+
+  @Column
+  @Enumerated(value = EnumType.STRING)
+  var status: PlanCreationScheduleStatus,
+
+  @Column
+  var exemptionReason: String?,
+
+  @Column(updatable = false)
+  val createdAtPrison: String,
+
+  @Column
+  var updatedAtPrison: String,
+) {
+  @Id
+  @GeneratedValue
+  @UuidGenerator
+  var id: UUID? = null
+
+  @Column(updatable = false)
+  @CreatedBy
+  var createdBy: String? = null
+
+  @Column(updatable = false)
+  @CreationTimestamp
+  var createdAt: Instant? = null
+
+  @Column
+  @LastModifiedBy
+  var updatedBy: String? = null
+
+  @Column
+  @UpdateTimestamp
+  var updatedAt: Instant? = null
+}
+
+enum class PlanCreationScheduleStatus(val activeReview: Boolean) {
+  SCHEDULED(true),
+  EXEMPT_SYSTEM_TECHNICAL_ISSUE(true),
+  EXEMPT_PRISONER_TRANSFER(false),
+  EXEMPT_PRISONER_RELEASE(false),
+  EXEMPT_PRISONER_DEATH(false),
+  EXEMPT_PRISONER_MERGE(false),
+  EXEMPT_UNKNOWN(false),
+  COMPLETED(false),
+}
